correction align et bgcolor

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
 .ChatBox {
   font-family: "gameboy" !important ;
-  background-color: black;
+  background-color: black !important;
   color :lightgrey;
   text-align: center;
   align-items: center;
